# kwic

./: Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  intern.json  package-lock.json  package.json  pre-first-deploy.sh  start.sh  tsconfig.json  vite.config.ts  webpack.config.js  whitelist-env.js
src/app_backend/: Cargo.toml  vetkd_app_backend.did
src/app_backend/src/: lib.rs  types.rs
src/app_frontend_js/: index.html  package-lock.json  package.json  tsconfig.json
src/app_frontend_js/src/: App.tsx  data.ts  index.tsx
src/app_frontend_js/src/api/: index.ts
src/app_frontend_js/src/components/DigitalDocument/: index.scss  index.tsx
src/app_frontend_js/src/components/Header/: header.tsx  index.scss
src/app_frontend_js/src/pages/airlines/: index.scss  index.tsx
src/app_frontend_js/src/pages/chat/: index.scss  index.tsx
src/app_frontend_js/src/pages/my-documents/: index.scss  index.tsx
src/app_frontend_js/src/pages/share-request/: index.scss  index.tsx
src/app_frontend_js/src/utils/: config.ts  crypto.test.ts  crypto.ts  encode.ts  local-storage.ts  time.ts
src/app_frontend_js/src/utils/crypto/: aes.ts  index.ts  merkalized-documents.ts
src/app_frontend_js/src/utils/data/: chat.ts  index.ts  messages.ts  prelude.ts  types.ts
src/kwic_backend/: Cargo.toml
src/kwic_frontend/src/: index.html  index.js
