[package]
name = "vetkd_app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libsecp256k1 = { version = "0.7.1", default-features = false, features = [
    "static-context",
] }
keccak-hash = "0.10"
candid = "0.9.3"
ic-cdk = "0.10.0"
serde = "1"
hex = "0.4"
